# wgpu-hs

./: .gitignore  .gitmodules  GettingStarted.md  README.md  cabal.project  cabal.project.local
.github/workflows/: ci.yml  formatting.yml
codegen/: CHANGELOG.md  codegen.cabal
codegen/app/: Main.hs
codegen/src/: Explore.hs
codegen/src/HeaderExtract/: EnumW32.hs  Struct.hs
wgpu-hs/: CHANGELOG.md  wgpu-hs.cabal
wgpu-hs-examples/: CHANGELOG.md  wgpu-hs-examples.cabal
wgpu-hs-examples/app/triangle/: Main.hs
wgpu-hs/examples/cube/: Cube.hs
wgpu-hs/examples/triangle/: Main.hs
wgpu-hs/examples/triangle-glfw/: TriangleGLFW.hs
wgpu-hs/examples/triangle-sdl/: TriangleSDL.hs
wgpu-hs/src/: WGPU.hs  WGPU.hsc
wgpu-hs/src-internal/WGPU/Internal/: Adapter.hs  Binding.hs  Buffer.hs  ChainedStruct.hs  Color.hs  CommandBuffer.hs  CommandEncoder.hs  Device.hs  Instance.hs  Memory.hs  Multipurpose.hs  Pipeline.hs  Queue.hs  RenderPass.hs  SMaybe.hs  Sampler.hs  Shader.hs  Surface.hs  SwapChain.hs  Texture.hs
wgpu-hs/src-internal/WGPU/Internal/GLFW/: Surface.hs
wgpu-hs/src-internal/WGPU/Internal/SDL/: Surface.hs
wgpu-hs/src/WGPU/: CStruct.hs  Chain.hs  Classy.hs
wgpu-hs/src/WGPU/BoneYard/: SimpleSDL.hs
wgpu-hs/src/WGPU/GLFW/: Surface.hs
wgpu-hs/src/WGPU/SDL/: Surface.hs
wgpu-hs/src/WGPU/Types/: ChainedStruct.hsc  DeviceDescriptor.hsc  DeviceExtras.hsc  NativeFeature.hsc  SType.hsc
wgpu-hs/src/cbits/: surface-macos.m  surface.c  wgpu-helpers.c
wgpu-hs/test/: Test.hs
wgpu-hs/test/WGPU/Types/: DeviceExtrasTest.hs
wgpu-raw-hs/: CHANGELOG.md  LICENSE  wgpu-raw-hs.cabal
wgpu-raw-hs-codegen/: CHANGELOG.md  README.md  wgpu-raw-hs-codegen.cabal
wgpu-raw-hs-codegen/app/: Main.hs
wgpu-raw-hs-codegen/src/WGPU/CodeGen/: Haskell.hs  Parse.hs  Pretty.hs
wgpu-raw-hs-codegen/src/WGPU/Metadata/: Git.hs
wgpu-raw-hs/cbits/: log.c  sdl-surface-linux-x11.c  sdl-surface-macos.m  sdl-surface-windows.c  surface-macos.m
wgpu-raw-hs/examples/triangle/: Triangle.hs
wgpu-raw-hs/src/WGPU/Raw/: Dynamic.hs  GLFWSurface.hs  Log.hs  SDLSurface.hs  Types.hs
