cabal-version:      3.0
name:               codegen
version:            0.1.0.0
synopsis:           Code generator for wgpu-hs.
description:        Code generator for wgpu-hs, based on the C header file.
bug-reports:        https://github.com/lancelet/wgpu-hs/issues
license:            BSD-3-Clause
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) 2021, Jonathan Merritt
category:           Graphics
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/lancelet/wgpu-hs.git

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.14.0.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

executable codegen
  import:           base, ghc-options
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:    codegen

library
  import:          base, ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Explore
    HeaderExtract.EnumW32

  build-depends:
    , language-c
    , pretty-simple
    , text
    , vector
