cabal-version:      3.0
name:               wgpu-hs
version:            0.1.0.0
synopsis:           WGPU for Haskell
description:        A WIP WGPU binding for Haskell
bug-reports:        https://github.com/lancelet/wgpu-hs/issues
license:            BSD-3-Clause
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) 2021, Jonathan Merritt
category:           Graphics
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/lancelet/wgpu-hs.git

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.14.0.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

library
  import:            base, ghc-options
  include-dirs:      wgpu-native/ffi
  c-sources:
    src/cbits/surface.c
    src/cbits/wgpu-helpers.c

  hs-source-dirs:    src
  pkgconfig-depends: sdl2 >=2.0.6
  build-depends:     sdl2
  exposed-modules:   WGPU
  extra-libraries:   wgpu_native

  if os(osx)
    c-sources:  src/cbits/surface-macos.m
    cc-options: -DWGPU_TARGET=WGPU_TARGET_MACOS
    frameworks: AppKit QuartzCore
