cabal-version:      3.0
name:               wgpu-raw-hs-codegen
version:            0.1.0.0
bug-reports:        https://github.com/lancelet/wgpu-hs/issues
license:            BSD-3-Clause
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) Jonathan Merritt, 2021
category:           Graphics
extra-source-files: CHANGELOG.md

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.14.0.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

executable wgpu-raw-hs-codegen
  import:         base, ghc-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , pretty-simple
    , wgpu-raw-hs-codegen

library
  import:          base, ghc-options
  hs-source-dirs:  src
  build-depends:
    , chronos
    , containers
    , directory
    , filepath
    , hashable
    , language-c
    , pretty-simple
    , prettyprinter
    , process
    , text

  exposed-modules:
    WGPU.CodeGen.Haskell
    WGPU.CodeGen.Parse
    WGPU.CodeGen.Pretty
    WGPU.Metadata.Git
